second-container/flask-application-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-application-svc2
spec:
  type: NodePort
  selector:
    app: flask-application2
  ports:
    - protocol: TCP
      name: hello
      nodePort: 32001
      port: 5000
      targetPort: 5000
    - protocol: TCP
      name: goodbye
      nodePort: 32002
      port: 6666
      targetPort: 6666
