second-container/flask-application-ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-application-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "serviceName=hello rewrite=/;serviceName=goodbye rewrite=/;"
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: flask-application-svc2
          servicePort: 5000
      - path: /goodbye
        backend:
          serviceName: flask-application-svc2
          servicePort: 6666
